--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
 }
 
 .card {
+    position: relative;
     width: 300px;
     display: flex;
     flex-direction: column;
@@ -36,11 +37,44 @@
 .card:hover {
     background-color: rgb(10, 73, 136) !important;
     transition: all 0.3s linear;
+    cursor: pointer;
 }
 
 .card:hover #icon {
     transform: scale(1.2);  
     transition: all 0.3s linear;
+}
+
+.card:hover .triangle{
+    background-color: rgb(10, 73, 136) !important;
+    transition: all 0.3s linear;
+}
+
+.triangle {
+    position: absolute;
+    top: 50%;
+    right: 271px; 
+    transform: rotate(-90deg);
+    width: 0;
+    height: 0;
+}
+
+#triangle1 {
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-top: 20px solid rgb(20, 97, 174);
+}
+
+#triangle2 {
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-top: 20px solid rgb(23, 107, 190);
+}
+
+#triangle3 {
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-top: 20px solid rgb(50, 131, 213);
 }
 
 #card1 {
